[package]
name = "unic_xid_updater"
version = "0.1.0"
authors = ["Robert Masen <robert.masen@smartthings.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
tokio = { version = "0.2", features = ["macros"] }
semver = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
octocrab = "0.4"
